# S6G6

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  README.md  S6G6.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
S6G6/: G6.cpp  LatticeConverter.cpp  MatG6.cpp  MatN.cpp  MatN.h  Niggli.cpp  S6.cpp  S6Dist.cpp  S6G6.vcxproj  S6G6.vcxproj.filters
include/: LatticeConverter.h  MatG6.h
lib/: CMakeCache.txt  lib.vcxproj  lib.vcxproj.filters
lib/inc/: G6.h  LRL_Cell.h  LRL_ToString.h  Niggli.h
lib/include/: S6.h  Selling.h  VecN.h
lib/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  G6.cpp  MatG6.cpp  Project.sln  S6Dist.cpp  Selling.cpp  VecN.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
s6g6/: s6g6.vcxproj  s6g6.vcxproj.filters
src/: CMakeLists.txt  LRL_Cell.cpp  LRL_ReadLatticeData.cpp  LatticeConverter.cpp  Niggli.cpp  Rcpp_distance.cpp  S6G6_test.cpp  test_Rcpp_distance.R
src/cmake/modules/: FindR.cmake  FindRcpp.cmake  FindRcppArmadillo.cmake  FindRcppParallel.cmake  FindTBB.cmake
test/: test.vcxproj  test.vcxproj.filters
test/include/: LRL_ReadLatticeData.h
